--- a/Android/Example/Resources/layout/Main.xml
+++ b/Android/Example/Resources/layout/Main.xml
@@ -57,4 +57,9 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.11"
         android:text="@string/sdk_is_enabled" />
+    <Button
+        android:text="@string/sdk_get_ids"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnGetIds" />
 </LinearLayout>
