--- a/iOS/Example/Main.storyboard
+++ b/iOS/Example/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,8 +20,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="44">
-                                <rect key="frame" x="125.5" y="493" width="163" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="44" misplaced="YES">
+                                <rect key="frame" x="126" y="389" width="163" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="163" id="53"/>
                                 </constraints>
@@ -77,8 +80,8 @@
                                     <action selector="BtnTrackSimpleEvent_TouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="104"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="77">
-                                <rect key="frame" x="129" y="531" width="156" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="77" misplaced="YES">
+                                <rect key="frame" x="129.5" y="427" width="156" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="156" id="80"/>
                                 </constraints>
@@ -89,8 +92,8 @@
                                     <action selector="BtnDisableOfflineMode_TouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="99"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81">
-                                <rect key="frame" x="137" y="569" width="140" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81" misplaced="YES">
+                                <rect key="frame" x="137.5" y="465" width="140" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="140" id="84"/>
                                 </constraints>
@@ -101,8 +104,8 @@
                                     <action selector="BtnEnableSdk_TouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="98"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="85">
-                                <rect key="frame" x="159" y="607" width="96" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="85" misplaced="YES">
+                                <rect key="frame" x="159.5" y="503" width="96" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="96" id="88"/>
                                 </constraints>
@@ -113,8 +116,8 @@
                                     <action selector="BtnDisableSdk_TouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="97"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="91">
-                                <rect key="frame" x="149.5" y="645" width="115" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="91" misplaced="YES">
+                                <rect key="frame" x="150" y="541" width="115" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="115" id="94"/>
                                 </constraints>
@@ -125,12 +128,19 @@
                                     <action selector="BtnIsSdkEnabled_TouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="96"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="1345" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
-                                <rect key="frame" x="150" y="683" width="114" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1345">
+                                <rect key="frame" x="150.5" y="579" width="114" height="30"/>
                                 <state key="normal" title="Get Ids"/>
-                                <constraints/>
                                 <connections>
-                                    <action selector="BtnGetIds_TouchUpInside:" destination="BYZ-38-t0r" id="1349" eventType="touchUpInside"/>
+                                    <action selector="BtnGetIds_TouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1349"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="5059" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="143" y="353" width="128" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="GDPR Forget Me"/>
+                                <connections>
+                                    <action selector="BtnGdprForgetMe_TouchUpInside:" destination="BYZ-38-t0r" id="5531" eventType="touchUpInside"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -154,8 +164,33 @@
                             <constraint firstAttribute="bottom" secondItem="85" secondAttribute="bottom" constant="99" id="90"/>
                             <constraint firstAttribute="centerX" secondItem="91" secondAttribute="centerX" id="92"/>
                             <constraint firstAttribute="bottom" secondItem="91" secondAttribute="bottom" constant="61" id="93"/>
-                            <constraint id="1347" firstItem="1345" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX"/>
-                            <constraint id="1348" firstItem="wfy-db-euE" firstAttribute="top" secondItem="1345" secondAttribute="bottom" constant="23"/>
+                            <constraint firstItem="1345" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1347"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1345" secondAttribute="bottom" constant="23" id="1348"/>
+                            <constraint id="2064" firstItem="77" firstAttribute="height" secondItem="44" secondAttribute="height"/>
+                            <constraint id="2065" firstItem="81" firstAttribute="height" secondItem="44" secondAttribute="height"/>
+                            <constraint id="2066" firstItem="85" firstAttribute="height" secondItem="44" secondAttribute="height"/>
+                            <constraint id="2067" firstItem="91" firstAttribute="height" secondItem="44" secondAttribute="height"/>
+                            <constraint id="2068" firstItem="1345" firstAttribute="height" secondItem="44" secondAttribute="height"/>
+                            <constraint id="2100" firstItem="77" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2101" firstItem="81" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2102" firstItem="85" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2103" firstItem="91" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2104" firstItem="1345" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2106" firstItem="77" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2107" firstItem="81" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2108" firstItem="85" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2109" firstItem="91" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2110" firstItem="1345" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2112" firstItem="77" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2113" firstItem="81" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2114" firstItem="85" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2115" firstItem="91" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2116" firstItem="1345" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2124" firstItem="77" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2125" firstItem="81" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2126" firstItem="85" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2127" firstItem="91" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
+                            <constraint id="2128" firstItem="1345" firstAttribute="centerX" secondItem="44" secondAttribute="centerX"/>
                         </constraints>
                     </view>
                     <connections>
@@ -169,6 +204,7 @@
                         <outlet property="BtnTrackRevenueEvent" destination="69" id="name-outlet-69"/>
                         <outlet property="BtnTrackSimpleEvent" destination="73" id="name-outlet-73"/>
                         <outlet property="BtnGetIds" destination="1345" id="name-outlet-1345"/>
+                        <outlet property="BtnGdprForgetMe" destination="5059" id="name-outlet-5059"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
